Bug 147760 - DOCX export: Writer adds timestamps to the anonymized tracked changes
Summary: DOCX export: Writer adds timestamps to the anonymized tracked changes
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0 target:7.3.3
Keywords:
Depends on: 146171
Blocks:
  Show dependency treegraph
 
Reported: 2022-03-04 08:28 UTC by NISZ LibreOffice Team
Modified: 2023-03-08 21:44 UTC (History)
0 users

See Also:
Crash report or crash signature:
Regression By:


Attachments
original anonymized document in MSO – no timestamp (11.29 KB, image/png)
2022-03-04 08:34 UTC, NISZ LibreOffice Team
Details
older LO export in MSO – redundant timestamp (25.54 KB, image/png)
2022-03-04 08:34 UTC, NISZ LibreOffice Team
Details
new LO export in MSO – redundant timestamp (11.74 KB, image/png)
2022-03-04 08:35 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2022-03-04 08:28:49 UTC
Description:
Track changes anonymized by MSO’s Document Inspector don't contain timestamps, but Writer adds to them during its DOCX export. The redundant timestamps are shown in Word as “1900. January 01.” (opening old LO export) or “1970. January 01.” (opening new LO export).

Steps to Reproduce:
1.Open test document https://bugs.documentfoundation.org/attachment.cgi?id=130169 of https://bugs.documentfoundation.org/show_bug.cgi?id=104797.
2.Export as DOCX.
3.Open the result in MSO.

Actual Results:
Writer exports unnecessary timestamps for anonymized changes.

Expected Results:
Writer don’t export unnecessary timestamp for anonymized changes.


Reproducible: Always


User Profile Reset: No



Additional Info:
DateTime attribute w:date is optional in w:ins/w:del according to the OOXML standard. Not specified w:date was imported as invalid zero date "0-00-00T00:00:00Z" resulting loss of change tracking data completely during an ODF roundtrip. This invalid zero date has been imported as Epoch time (1970-01-01) to avoid losing change tracking data since commit 2c51746997478ad5d0e7cc64aa6489769c473d43 (tdf#146171).

See also
https://bugs.documentfoundation.org/show_bug.cgi?id=146171
Comment 1 NISZ LibreOffice Team 2022-03-04 08:34:16 UTC
Created attachment 178650 [details]
original anonymized document in MSO – no timestamp
Comment 2 NISZ LibreOffice Team 2022-03-04 08:34:56 UTC
Created attachment 178651 [details]
older LO export in MSO – redundant timestamp
Comment 3 NISZ LibreOffice Team 2022-03-04 08:35:32 UTC
Created attachment 178652 [details]
new LO export in MSO – redundant timestamp
Comment 4 Commit Notification 2022-03-10 18:14:31 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/64dcedcf7c073d1819794d68a33651b14877e1b5

tdf#147760 tdf#142902 DOCX export: anonymize date and moveFromRangeStart

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 László Németh 2022-03-10 18:15:09 UTC
Commit description:

tdf#147760 tdf#142902 DOCX export: anonymize date and moveFromRangeStart

Anonymization exported a zeroed w:date in change tracking
and commenting elements w:ins, w:del, w:moveFrom, w:moveTo,
w:cellIns, w:cellDel, w:comment, w:moveFromRangeStart and
w:moveToRangeStart instead of simply skipping it, according
to OOXML.

Also don't export w:date, if the imported DOCX was anonymized
by Word's Document Inspector, i.e. it doesn't contain w:date.

Fix also missing anonymization of author and date of
moveFromRangeStart and moveToRangeStart elements.

Follow-up to commit 2c51746997478ad5d0e7cc64aa6489769c473d43
"tdf#146171 DOCX: fix loss of change tracking, if no date",
commit 9e1e88ad5cf2dc0e9b188c60930445652a6c7519
"tdf#145720 DOCX export: fix loss of tracked moving" and
commit ded2452a52d21131347a0dc2e25c8161f20fcfad
"tdf#142902 DOCX export: remove personal info of comments and changes".
Comment 6 Commit Notification 2022-03-11 12:24:26 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/554d95b2b4ece9cd570dfbad357bfedafc6a4dd1

tdf#147760 tdf#142902 DOCX export: anonymize date and moveFromRangeStart

It will be available in 7.3.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 NISZ LibreOffice Team 2022-03-31 06:43:56 UTC
Verified in:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: a3988b2d147a2442b348d58b79dbd6e71472b7af
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded