tdf#147760 tdf#142902 DOCX export: anonymize date and moveFromRangeStart

Anonymization exported a zeroed w:date in change tracking
and commenting elements w:ins, w:del, w:moveFrom, w:moveTo,
w:cellIns, w:cellDel, w:comment, w:moveFromRangeStart and
w:moveToRangeStart instead of simply skipping it, according
to OOXML.

Also don't export w:date, if the imported DOCX was anonymized
by Word's Document Inspector, i.e. it doesn't contain w:date.

Fix also missing anonymization of author and date of
moveFromRangeStart and moveToRangeStart elements.

Follow-up to commit 2c51746997478ad5d0e7cc64aa6489769c473d43
"tdf#146171 DOCX: fix loss of change tracking, if no date",
commit 9e1e88ad5cf2dc0e9b188c60930445652a6c7519
"tdf#145720 DOCX export: fix loss of tracked moving" and
commit ded2452a52d21131347a0dc2e25c8161f20fcfad
"tdf#142902 DOCX export: remove personal info of comments and changes".

Change-Id: If79402e4723886ceab3b4b9c24e83793f87cd513
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/131317
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>